Fix tab layout, menu positioning and scrollbar visibility

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -3,6 +3,6 @@
 /* -------------------------------------------------------------------------- */
 div#app {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: max-content;
 }
